2010-05-06  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/common/testsuite.py:
	Fix local variable name.

2010-05-05  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/common/testsuite.py:
	Add @attr decorator to testsuite, to help marking test
	suites/cases with an attribute.

	Test suites/cases can be decorated with @attr(todo='wip'),
	@attr(skip='reason'), or @attr('slow') (the last is only supported
	by flumotion-trial).

2010-05-05  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Marc-André Lureau  <mlureau@flumotion.com>

	* common/flumotion-trial:
	* flumotion/common/testsuite.py:
	Add --skip-slow option to flumotion-trial to skip test suites and
	test cases marked with slow=True.

2010-05-05  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/producers/icecast/icecast.py:
	Use souphttpsrc instead of gnomevfssrc, to avoid blocking on
	socket connect().
	Closes #1420.

2010-04-30  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Log socket listening and porter login as INFO and include
	interface information.

2010-04-28  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/manager/config.py:
	Use common's versionStringToTuple when parsing the version

2010-04-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/config.py:
	  Show unparseable version.

2010-04-27  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* README:
	* configure.ac:
	* flumotion.spec.in:
	* pkg/debian-common/control:
	* pkg/ubuntu-gutsy/control:
	* pkg/ubuntu-hardy/control:
	* pkg/ubuntu-intrepid/control:
	* pkg/ubuntu-jaunty/control:
	* pkg/ubuntu-karmic/control:
	Bump the required version of Twisted to 2.5.0.
	Closes #1411.

2010-04-27  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
